force-app/main/default/objects/ReportingData__c/fields/TAG_ExternalNotificationId__c.field-meta.xml
<CustomField>
    <fullName>TAG_ExternalNotificationId__c</fullName>
    <externalId>true</externalId>
    <label>External Notification Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>