force-app/main/default/objects/ReportingData__c/fields/TAG_ExternalNotifificationSent__c.field-meta.xml
<CustomField>
    <fullName>TAG_ExternalNotifificationSent__c</fullName>
    <label>External Notifification Sent</label>
    <type>DateTime</type>
</CustomField>