force-app/main/default/objects/ReportingData__c/fields/TAG_MessageRecordId__c.field-meta.xml
<CustomField>
    <fullName>TAG_MessageRecordId__c</fullName>
    <label>Message Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>