force-app/main/default/objects/ReportingData__c/fields/TAG_NotificationGroupId__c.field-meta.xml
<CustomField>
    <fullName>TAG_NotificationGroupId__c</fullName>
    <label>Notification Group Id</label>
    <length>48</length>
    <type>Text</type>
</CustomField>