force-app/main/default/objects/ReportingData__c/fields/TAG_NotificationType__c.field-meta.xml
<CustomField>
    <fullName>TAG_NotificationType__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ekstern varsel</fullName>
            </value>
            <value>
                <fullName>Ekstern epost</fullName>
            </value>
            <value>
                <fullName>Ekstern sms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>