force-app/main/default/objects/ReportingData__c/fields/TAG_SentToPhoneNr__c.field-meta.xml
<CustomField>
    <fullName>TAG_SentToPhoneNr__c</fullName>
    <label>Sent to Phone Nr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>